# minidef

./: .gitignore  GSll.hs  README.md  Sll.hs  SllIo.hs  SllTreeless.hs  SllUtil.hs  Treeless.hs  minidef.cabal
notes/: notes.md
tests/: Tests.hs
