name:             minidef
version:          0.1
license:          BSD3
cabal-version:    >= 2.0
build-type:       Simple

library minidef-lib
    default-language:   Haskell2010
    exposed-modules:    Sll, SllIo
    build-depends:      base

test-suite minidef-test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            tests/Tests.hs
    other-modules:      Sll, SllIo
    build-depends:      minidef-lib, base, raw-strings-qq, tasty, tasty-hunit
